yiltc/testsuite/negative/undefined_var.yilt
fn main()
    let x = undefined_var
